# aws_GenAI_Lab

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
docs/astro-docs/: README.md  astro.config.mjs  package.json
docs/astro-docs/src/content/docs/: index.mdx
docs/astro-docs/src/content/docs/applications/: cdk-infra-guide.mdx  reactjs-ui-guide.mdx
docs/astro-docs/src/content/docs/faq/: faq.mdx
docs/astro-docs/src/content/docs/guides/: api-testing-guide.mdx  cleanup-guide.mdx  customization-guide.mdx
docs/astro-docs/src/content/docs/intro/: deployment.mdx  getting-started.mdx  use-case-selection.mdx
docs/astro-docs/src/content/docs/ko/: index.mdx
docs/astro-docs/src/content/docs/ko/applications/: cdk-infra-guide.mdx  reactjs-ui-guide.mdx
docs/astro-docs/src/content/docs/ko/faq/: faq.mdx
docs/astro-docs/src/content/docs/ko/guides/: api-testing-guide.mdx  cleanup-guide.mdx  customization-guide.mdx
docs/astro-docs/src/content/docs/ko/intro/: deployment.mdx  getting-started.mdx  use-case-selection.mdx
docs/astro-docs/src/fonts/: font-face.css
docs/astro-docs/src/styles/: custom.css
tools/athena-generator/: athena_template.csv  generate_athena_stack.py
tools/python-venv-tool/: package.json  tsconfig.json
